--- a/experiencia.html
+++ b/experiencia.html
@@ -7,62 +7,49 @@
 </head>
 
 <body>
+    <div id="snow">
+        <div id="menu">
+            <ul>
+                <li><a href="index.html">Início</a></li>
+                <li><a href="formacao.html">Formação</a></li>
+                <li><a href="experiencia.html">Experiência</a></li>
+                <li><a href="portifolio.html">Portifólio</a></li>
 
-    <div id="menu">
-        <ul>
-            <li><a href="index.html">Início</a></li>
-            <li><a href="formacao.html">Formação</a></li>
-            <li><a href="experiencia.html">Experiência</a></li>
-            <li><a href="contato.html">Contato</a></li>
-            <li><a href="portifolio.html">Portifólio</a></li>
+            </ul>
+        </div>
 
-        </ul>
+        <section id=img>
+            <img src="img/flaviat.png" alt="Flavia" width=300px title="Flavia"><br>
+        </section>
+
+        </section>
+        <section id="experiencia-txt">
+            <h2>Souza Cruz S/A, Blumenau.</h2>
+
+            <p>Responsável pelas rotinas do laboratório, controle de reagentes e vidrarias.</p>
+            <p>Fazer análises de produtos industriais para exportação e importação.</p>
+            <p>Relatórios e controle de qualidade.</p>
+
+            <h2>Axchem Brasil Indústria Química​.</h2>
+            
+            <p>Fazer análises de efluentes.</p>
+            <p>Gerar relatórios de garantia de qualidade.</p>
+            <p>Análises de águas e incrustações de sistemas de caldeira.</p>
+            <p>Análises de DBO, DQO, Nitrogênio, Fósforo, Fenol, Dureza, Sulfito, etc.</p>
+        </section>
     </div>
-
-    <section id=img>
-        <img src="img/flaviat.png" alt="Flavia" width=250 title="Flavia"><br>
-    </section>
-
-            </section>
-            <section id="Flavia">
-                <h2>Souza Cruz S/A, Blumenau.</h2>
-                <p>
-
-
-                    Responsável pelas rotinas do laboratório, controle de reagentes e vidrarias.
-
-                </p>
-
-                <p>Fazer análises de produtos industriais para exportação e importação.
-
-                </p>
-                <p>Relatórios e controle de qualidade.
-
-                </p>
-
-                <h2>Axchem Brasil Indústria Química​.</h2>
-                <p>
-                    Fazer análises de efluentes.
-                </p>
-
-
-                <p>
-                    Gerar relatórios de garantia de qualidade.
-
-                </p>
-
-                <p>
-                    Análises de águas e incrustações de sistemas de caldeira.
-                </p>
-
-                <p>
-                    Análises de DBO, DQO, Nitrogênio, Fósforo, Fenol, Alcalinidades, Dureza, Sulfito, etc.<br>
-                    <br>
-                    
-
-
-                </p>
-            </section>
+    <footer>
+        <nav class="rodape">
+            <li><a href="https://www.facebook.com/flavia.tayse.5" target="_black"><img src="img/facebook.png"
+                        alt="Logo do Facebook" width="35px"></a></li>
+            <li><a href="https://www.instagram.com/flaviatayse/" target="_black"><img src="img/instagram.png"
+                        alt="Logo do Instagram" width="35px"></a></li>
+            <li><a href="https://www.linkedin.com/in/fl%C3%A1via-bruno-411327177" target="_black"><img
+                        src="img/linkedin.png" alt="Logo do Linkedin" width="35px"></a></li>
+            <li><a href="https://api.whatsapp.com/send?phone=554791398101&text=Ol%C3%A1" target="_black"><img
+                        src="img/whatsapp.png" alt="Logo do Whatsapp" width="35px"></a></li>
+        </nav>
+    </footer>
 
 
 </body>
