--- a/formacao.html
+++ b/formacao.html
@@ -7,42 +7,50 @@
 </head>
 
 <body>
+    <div id="snow">
+        <div id="menu">
+            <ul>
+                <li><a href="index.html">Início</a></li>
+                <li><a href="formacao.html">Formação</a></li>
+                <li><a href="experiencia.html">Experiência</a></li>
+                <li><a href="portifolio.html">Portifólio</a></li>
 
-    <div id="menu">
-        <ul>
-            <li><a href="index.html">Início</a></li>
-            <li><a href="formacao.html">Formação</a></li>
-            <li><a href="experiencia.html">Experiência</a></li>
-            <li><a href="contato.html">Contato</a></li>
-            <li><a href="portifolio.html">Portifólio</a></li>
+            </ul>
+        </div>
 
-        </ul>
+        <section id=img>
+            <img src="img/flaviat.png" alt="Flavia" width=300px title="Flavia"><br>
+        </section>
+
+
+        </section>
+        <section id="formacao-txt">
+            <h2>Técnico em Química integrado no Ensino Médio ​</h2>
+            <p>Instituto Federal de Santa Catarina campus gaspar.</p>
+
+            <h2>Graduação em Química </h2>
+            <p>​Universidade Federal de Santa Catarina campus Blumenau. (Incompleto)</p>
+
+            <h2>Curso de Progração COBOL </h2>
+            <p>​Proway - Treinamento e orientação profissional. (​Cursando)</p>
+
+        </section>
     </div>
+    <footer>
+        <nav class="rodape">
+            <li><a href="https://www.facebook.com/flavia.tayse.5" target="_black"><img src="img/facebook.png"
+                        alt="Logo do Facebook" width="35px"></a></li>
+            <li><a href="https://www.instagram.com/flaviatayse/" target="_black"><img src="img/instagram.png"
+                        alt="Logo do Instagram" width="35px"></a></li>
+            <li><a href="https://www.linkedin.com/in/fl%C3%A1via-bruno-411327177" target="_black"><img
+                        src="img/linkedin.png" alt="Logo do Linkedin" width="35px"></a></li>
+            <li><a href="https://api.whatsapp.com/send?phone=554791398101&text=Ol%C3%A1" target="_black"><img
+                        src="img/whatsapp.png" alt="Logo do Whatsapp" width="35px"></a></li>
+        </nav>
+    </footer>
 
-    <section id=img >
-        <img src="img/flaviat.png" alt="Flavia" width=250 title="Flavia"><br>
-    </section>
 
-
-    </section>
-    <section id="Flavia">
-        <h2>Técnico em Química integrado no Ensino Médio ​</h2>
-        <p>
-
-            Instituto Federal de Santa Catarina campus gaspar. ​
-
-        </p>
-        <h2>Graduação em Química </h2>
-        <p>
-            ​ ​Universidade Federal de Santa Catarina campus Blumenau. 
-
-        </p>
-        <h2>Curso de Progração COBOL </h2>
-        <p>
-            ​ ​Proway - Treinamento e orientação profissional. (​Cursando)
-
-        </p>
-    </section>
 </body>
+
 
 </html>
