--- a/index.html
+++ b/index.html
@@ -8,38 +8,55 @@
 
 <body>
 
-    <div id="menu">
-        <ul>
-            <li><a href="index.html">Início</a></li>
-            <li><a href="formacao.html">Formação</a></li>
-            <li><a href="experiencia.html">Experiência</a></li>
-            <li><a href="contato.html">Contato</a></li>
-            <li><a href="portifolio.html">Portifólio</a></li>
+    <div id="snow">
 
-        </ul>
-    </div>
 
-    
-    <main>
+        <div id="menu">
+            <ul>
+                <li><a href="index.html">Início</a></li>
+                <li><a href="formacao.html">Formação</a></li>
+                <li><a href="experiencia.html">Experiência</a></li>
+                <li><a href="portifolio.html">Portifólio</a></li>
 
-        <section id="img">
-            <img src="img/flaviat.png" alt="Flavia" width=250 title="Flavia"><br>
-        </section>
-        <section id=titulo>
-            <h2>Flavia Tayse Bruno</h2>
-        </section>
-        <section id="Flavia">
-            <p>
-                Tenho 20 anos, catarinense, natural de Blumenau na qual resido ainda.
-                Estudante de Licenciatura em Química na Universidade Federal de Santa Catarina.</p>
 
-               <p> Sou Padawan na HBSIS/Ambev, na area de tecnologia para programação de Cobol.</p>
+            </ul>
+        </div>
+
+
+        <main>
+
+            <section id="img">
+                <img src="img/flaviat.png" alt="Flavia" width=300px title="Flavia"><br>
+            </section>
+            <section id=titulo>
+                <h2>Flavia Tayse Bruno</h2>
+            </section>
+            <section id="Flavia">
+                <p>
+                    Tenho 20 anos, catarinense, natural de Blumenau na qual resido ainda.
+                    Estudante de Licenciatura em Química na Universidade Federal de Santa Catarina.</p>
+
+                <p> Sou Padawan na HBSIS/Ambev, na area de tecnologia para programação de Cobol.</p>
 
                 <p>Sou muito pró-ativa e focada, me dedicando ao máximo para aprender e para realizar minhas funções,
-                gosto de adiquirir novos conhecimentos.
-            </p>
-        </section>
-    </main>
+                    gosto de adiquirir novos conhecimentos.
+                </p>
+            </section>
+        </main>
+    </div>
+    <footer>
+        <nav class="rodape">
+            <li><a href="https://www.facebook.com/flavia.tayse.5" target="_black"><img src="img/facebook.png"
+                        alt="Logo do Facebook" width="35px"></a></li>
+            <li><a href="https://www.instagram.com/flaviatayse/" target="_black"><img src="img/instagram.png"
+                        alt="Logo do Instagram" width="35px"></a></li>
+            <li><a href="https://www.linkedin.com/in/fl%C3%A1via-bruno-411327177" target="_black"><img
+                        src="img/linkedin.png" alt="Logo do Linkedin" width="35px"></a></li>
+            <li><a href="https://api.whatsapp.com/send?phone=554791398101&text=Ol%C3%A1" target="_black"><img
+                        src="img/whatsapp.png" alt="Logo do Whatsapp" width="35px"></a></li>
+        </nav>
+    </footer>
+
 
 </body>
 
